--- a/styles/numWhite.css
+++ b/styles/numWhite.css
@@ -297,7 +297,8 @@ input[type=text], select, textarea {
 }
 
 .cp-location-title{
-  color:#ff5050;;
+  color:#343a40;
+  font-weight: bold;
 }
 
 .menuI a{
@@ -330,10 +331,10 @@ footer{
   margin-top: 40px;
 }
 footer a{
-  color:#ff5050;
+  color:##ccff99;
 }
 footer a:hover{
-  color:#ccff99;
+  color:#ff5050;
 }
 footer span {
     font-family: 'Dancing Script', cursive;
